--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
     <div class="container">
     <div class="col-lg-8 mx-auto info">
           <h2>Contact</h2>
-              <a href="https://goo.gl/maps/qUKwzLYqT5oHEsaL7"><p><i class="fa fa-map-marker fa-2x"></i>adresse:92 Rue St Dizier Nancy, France</p></a>
-              <p><i class="fa fa-phone fa-2x"></i>teléphone:+33 3 54 16 24 51</p></a>
+              <a href="https://goo.gl/maps/qUKwzLYqT5oHEsaL7"><p><i class="fa fa-map-marker fa-2x"></i>92 Rue St Dizier Nancy, France</p></a>
+              <p><i class="fa fa-phone fa-2x"></i>+33 3 54 16 24 51</p></a>
               <a href="https://www.instagram.com/musickontrol"><p><i class="fa fa-instagram fa-2x"></i>instagram</p></a>
               <a href="https://fr-fr.facebook.com/pages/category/Electronics-Store/Music-Kontrol-170296356950248/"><p><i class="fa fa-facebook fa-2x"></i>facebook</p></a>
-              <a href="musickontrol@sfr.fr"><p><i class="fa fa-envelope-o fa-2x"></i>email:musickontrol@sfr.fr</p></a>
+              <a href="musickontrol@sfr.fr"><p><i class="fa fa-envelope-o fa-2x"></i>musickontrol@sfr.fr</p></a>
         </div>
       </div>
     </div>
