--- a/index.html
+++ b/index.html
@@ -57,18 +57,18 @@
       <h2>Services</h2>
   </div>
   <div class="row">
-    <div class="col-xl-3 col-md-6 mb-4">
+    <div class="col-xl-2 col-md-4 mb-4">
       <div class="card border-0 shadow">
-        <img src="img/price.jpg" class="card-img-top" alt="pricing"><h5 class="card-title mb-0">Paiement 3X sans frais</h5>
+        <img src="img/mk1.jpg" class="card-img-top" alt="pricing"><h5 class="card-title mb-0">Paiement 3X sans frais</h5>
         <div class="card-body text-center">
           <h5 class="card-title mb-0">Paiement 3X sans frais</h5>
           <div class="card-text text-black-50">Votre magasin vous offre la possibilité de régler vos achats en 3X sans frais a partir de 150€ à l'aide d'un RIB et d'une piece d'identité. </div>
         </div>
       </div>
     </div>
-    <div class="col-xl-3 col-md-6 mb-4">
+    <div class="col-xl-2 col-md-4 mb-4">
       <div class="card border-0 shadow">
-        <img src="img/ampli.jpg" class="card-img-top" alt="ampli">
+        <img src="img/mk.jpg" class="card-img-top" alt="ampli">
         <div class="card-body text-center">
           <h5 class="card-title mb-0">installation de systèmes de sonorisation</h5>
           <div class="card-text text-black-50">installation de systèmes pour magasin ,restaurant ,Bar.
@@ -76,18 +76,18 @@
         </div>
       </div>
     </div>
-    <div class="col-xl-3 col-md-6 mb-4">
+    <div class="col-xl-2 col-md-4 mb-4">
       <div class="card border-0 shadow">
-        <img src="img/livraison.jpg" class="card-img-top" alt="livraison">
+        <img src="img/mk1.jpg" class="card-img-top" alt="livraison">
         <div class="card-body text-center">
           <h5 class="card-title mb-0">livraison</h5>
           <div class="card-text text-black-50">A partir de 2OO€ ,après conseil en magasin les produits choisi ou sélectionné par vos soins sur catalogue peuvent être livré a votre domicile gratuitement</div>
         </div>
       </div>
     </div>
-    <div class="col-xl-3 col-md-6 mb-4">
+    <div class="col-xl-2 col-md-4 mb-4">
       <div class="card border-0 shadow">
-        <img src="img/location (1).jpg" class="card-img-top" alt="louer">
+        <img src="img/carrteson.png" class="card-img-top" alt="louer" >
         <div class="card-body text-center">
           <h5 class="card-title mb-0">location son et lumière</h5>
           <div class="card-text text-black-50">Un anniversaire ,un mariage,un événement ou le son et la lumière est essentiel.
@@ -96,9 +96,9 @@
       </div>
     </div>
   </div>
-  <div class="col-xl-3 col-md-6 mb-4">
+  <div class="col-xl-2 col-md-6 mb-4">
       <div class="card border-0 shadow">
-        <img src="img/mixer.jpg" class="card-img-top" alt="platine">
+        <img src="img/mk1.jpg" class="card-img-top" alt="platine">
         <div class="card-body text-center">
           <h5 class="card-title mb-0">Reparations et nettoyage platine mk2</h5>
           <div class="card-text text-black-50">Problème avec une vieille platine Technics mk2,changement de la masse, de cable RCA ,nettoyage complet de votre platine .</div>
@@ -126,29 +126,16 @@
 
 
 
-  <section id="partenaires">
-    <div class="container">
-        <div class="col-lg-9 mx-auto text-center pb-5">
-            <h2>partenaires</h2>
-        </div>
-        <section class="customer-logos slider">
-          <div class="slide"><img src="img/akai.png" width="200" ></div>
-          <div class="slide"><img src="img/Cubase_logo.svg.png" width="200" ></div>
-          <div class="slide"><img src="img/seinheiser.png" width="300" height="200"></div>
-          <div class="slide"><img src="img/pioneer.jpg" width="200" height="200"></div>
-          <div class="slide"><img src="img/marshall.png" width="200" height="150"></div>
-          <div class="slide"><img src="img/vox.png" width="200" height="150"></div>
-          <div class="slide"><img src="img/yamaha.jpg" width="200" height="200"></div>
-          <div class="slide"><img src="img/fender.png" width="200" height="150"></div>
-        </section>
-      </div>
-
-</section>
-
-
   <footer class="py-5 bg-dark">
     <div class="container">
-        <div class="row">
+          <div class="">
+            <h4 class="text-white">Partenaires</h4>
+              <div class="slide"><img src="img/akai.png" width="100" ></div>
+              <div class="slide"><img src="img/Cubase_logo.svg.png" width="100" ></div>
+              <div class="slide"><img src="img/marshall.png" width="100" height="100"></div>
+              <div class="slide"><img src="img/vox.png" width="100" height="100"></div>
+              <div class="slide"><img src="img/yamaha.jpg" width="100" height="100"></div>
+          </div>
             <div class="col-lg-8 mx-auto text text-right text-white ">
               <h2>A propos de  nous </h2>
               <p class="lead">Magasin de musique électronique
