--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Muzikcontrol</title>
   <link href="libraries/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="libraries/fontawesome/css/all.min.css" rel="stylesheet">
+  <link href="libraries/fontawesome/css/all.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link href="css/infinite-slider.css" rel="stylesheet">
 </head>
@@ -52,14 +52,14 @@
     -->
 <!-- services (pb) signifie padding bottom raccourci bs-->
   <section id="services" class="bg-light text-center" >
-<div class="container">
+<div class="container mkservices">
   <div class="col-lg-12 mx-auto text-center pb-5">
       <h2>Services</h2>
   </div>
   <div class="row">
     <div class="col-xl-2 col-md-4 mb-4">
       <div class="card border-0 shadow">
-        <img src="img/mk1.jpg" class="card-img-top" alt="pricing"><h5 class="card-title mb-0">Paiement 3X sans frais</h5>
+        <img src="img/mk1.jpg" class="card-img-top pricing " alt="pricing"><h5 class="card-title mb-0">Paiement 3X sans frais</h5>
         <div class="card-body text-center">
           <h5 class="card-title mb-0">Paiement 3X sans frais</h5>
           <div class="card-text text-black-50">Votre magasin vous offre la possibilité de régler vos achats en 3X sans frais a partir de 150€ à l'aide d'un RIB et d'une piece d'identité. </div>
@@ -68,7 +68,7 @@
     </div>
     <div class="col-xl-2 col-md-4 mb-4">
       <div class="card border-0 shadow">
-        <img src="img/mk.jpg" class="card-img-top" alt="ampli">
+        <img src="img/mk.jpg" class="card-img-top sono" alt="ampli">
         <div class="card-body text-center">
           <h5 class="card-title mb-0">installation de systèmes de sonorisation</h5>
           <div class="card-text text-black-50">installation de systèmes pour magasin ,restaurant ,Bar.
@@ -78,7 +78,7 @@
     </div>
     <div class="col-xl-2 col-md-4 mb-4">
       <div class="card border-0 shadow">
-        <img src="img/mk1.jpg" class="card-img-top" alt="livraison">
+        <img src="img/mk1.jpg" class="card-img-top livraison" alt="livraison">
         <div class="card-body text-center">
           <h5 class="card-title mb-0">livraison</h5>
           <div class="card-text text-black-50">A partir de 2OO€ ,après conseil en magasin les produits choisi ou sélectionné par vos soins sur catalogue peuvent être livré a votre domicile gratuitement</div>
@@ -87,7 +87,7 @@
     </div>
     <div class="col-xl-2 col-md-4 mb-4">
       <div class="card border-0 shadow">
-        <img src="img/carrteson.png" class="card-img-top" alt="louer" >
+        <img src="img/carrteson.png" class="card-img-top location" alt="louer" >
         <div class="card-body text-center">
           <h5 class="card-title mb-0">location son et lumière</h5>
           <div class="card-text text-black-50">Un anniversaire ,un mariage,un événement ou le son et la lumière est essentiel.
@@ -98,7 +98,7 @@
   </div>
   <div class="col-xl-2 col-md-6 mb-4">
       <div class="card border-0 shadow">
-        <img src="img/mk1.jpg" class="card-img-top" alt="platine">
+        <img src="img/mk1.jpg" class="card-img-top platine" alt="platine">
         <div class="card-body text-center">
           <h5 class="card-title mb-0">Reparations et nettoyage platine mk2</h5>
           <div class="card-text text-black-50">Problème avec une vieille platine Technics mk2,changement de la masse, de cable RCA ,nettoyage complet de votre platine .</div>
@@ -109,16 +109,15 @@
   </section>
 
  
- 
   <section id="contact" class="bg-light">
     <div class="container">
     <div class="col-lg-8 mx-auto info text-right">
           <h2 class="text-center">Contact</h2>
-              <a href="https://goo.gl/maps/qUKwzLYqT5oHEsaL7"><p><i class="fa fa-map-marker fa-2x"></i>92 Rue St Dizier Nancy, France</p></a>
+              <a href="https://goo.gl/maps/qUKwzLYqT5oHEsaL7"><p><i class="fas fa-map-marker-alt fa-2x"></i>92 Rue St Dizier Nancy, France</p></a>
               <p><i class="fa fa-phone fa-2x"></i>+33 3 54 16 24 51</p></a>
-              <a href="https://www.instagram.com/musickontrol"><p><i class="fa fa-instagram fa-2x"></i>instagram</p></a>
-              <a href="https://fr-fr.facebook.com/pages/category/Electronics-Store/Music-Kontrol-170296356950248/"><p><i class="fa fa-facebook fa-2x"></i>facebook</p></a>
-              <a href="musickontrol@sfr.fr"><p><i class="fa fa-envelope-o fa-2x"></i>musickontrol@sfr.fr</p></a>
+              <a href="https://www.instagram.com/musickontrol"><p><i class="fab fa-instagram fa-2x"></i>instagram</p></a>
+              <a href="https://fr-fr.facebook.com/pages/category/Electronics-Store/Music-Kontrol-170296356950248/"><p><i class="fab fa-facebook fa-2x"></i>facebook</p></a>
+              <a href="musickontrol@sfr.fr"></p><i class="fas fa-envelope fa-2x"></i>musickontrol@sfr.fr</p></a>
         </div>
       </div>
     </div>
