--- a/index.html
+++ b/index.html
@@ -5,145 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Muzikcontrol</title>
-  <link href="libraries/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="libraries/fontawesome/css/all.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
-  <link href="css/infinite-slider.css" rel="stylesheet">
-</head>
-
-<body id="page-top">
-<!-- navigation-->
-    <nav class="navbar navbar-expand-lg navbar-white bg-dark fixed-top" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top"><img class="logo" src="img/logo.jpg" alt="logo"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#evenements">Evenement</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#decouverte">Découverte</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#partenaires">Partenaires</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    
-  <!-- image principale
-     <div class="jumbotron big-banner" style="height: 500px; padding-top: 150px;">
-  <header class="text-white">
-    <div class="container text-center">
-      <h1 class="fronttext">Muzikkontrol</h1>
-    </div>
-  </header>
-     </div>
-    -->
-<!-- services (pb) signifie padding bottom raccourci bs-->
-  <section id="services" class="bg-light text-center" >
-<div class="container mkservices">
-  <div class="col-lg-12 mx-auto text-center pb-5">
-      <h2>Services</h2>
-  </div>
-  <div class="row">
-    <div class="col-xl-2 col-md-4 mb-4">
-      <div class="card border-0 shadow">
-        <img src="img/mk1.jpg" class="card-img-top pricing " alt="pricing"><h5 class="card-title mb-0">Paiement 3X sans frais</h5>
-        <div class="card-body text-center">
-          <h5 class="card-title mb-0">Paiement 3X sans frais</h5>
-          <div class="card-text text-black-50">Votre magasin vous offre la possibilité de régler vos achats en 3X sans frais a partir de 150€ à l'aide d'un RIB et d'une piece d'identité. </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-xl-2 col-md-4 mb-4">
-      <div class="card border-0 shadow">
-        <img src="img/mk.jpg" class="card-img-top sono" alt="ampli">
-        <div class="card-body text-center">
-          <h5 class="card-title mb-0">installation de systèmes de sonorisation</h5>
-          <div class="card-text text-black-50">installation de systèmes pour magasin ,restaurant ,Bar.
-              La sonorisation de restaurant ou de bar répond à des besoins bien spécifiques. L'enjeu est d'obtenir une sono capable de diffuser de la musique d'ambiance de façon agréable, avec un son parfait et un volume égal,homogène dans tout le restaurant, après étude et devis a la clés ,Music kontrol propose des solutions simple et bon marché.</div>
-        </div>
-      </div>
-    </div>
-    <div class="col-xl-2 col-md-4 mb-4">
-      <div class="card border-0 shadow">
-        <img src="img/mk1.jpg" class="card-img-top livraison" alt="livraison">
-        <div class="card-body text-center">
-          <h5 class="card-title mb-0">livraison</h5>
-          <div class="card-text text-black-50">A partir de 2OO€ ,après conseil en magasin les produits choisi ou sélectionné par vos soins sur catalogue peuvent être livré a votre domicile gratuitement</div>
-        </div>
-      </div>
-    </div>
-    <div class="col-xl-2 col-md-4 mb-4">
-      <div class="card border-0 shadow">
-        <img src="img/carrteson.png" class="card-img-top location" alt="louer" >
-        <div class="card-body text-center">
-          <h5 class="card-title mb-0">location son et lumière</h5>
-          <div class="card-text text-black-50">Un anniversaire ,un mariage,un événement ou le son et la lumière est essentiel.
-              Music kontrol est present pour vos événements avec des systèmes professionnel et simple d'utilisation a des prix attractif.</div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="col-xl-2 col-md-6 mb-4">
-      <div class="card border-0 shadow">
-        <img src="img/mk1.jpg" class="card-img-top platine" alt="platine">
-        <div class="card-body text-center">
-          <h5 class="card-title mb-0">Reparations et nettoyage platine mk2</h5>
-          <div class="card-text text-black-50">Problème avec une vieille platine Technics mk2,changement de la masse, de cable RCA ,nettoyage complet de votre platine .</div>
-        </div>
-      </div>
-    </div>
-</div>
-  </section>
-
- 
-  <section id="contact" class="bg-light">
-    <div class="container">
-    <div class="col-lg-8 mx-auto info text-right">
-          <h2 class="text-center">Contact</h2>
-              <a href="https://goo.gl/maps/qUKwzLYqT5oHEsaL7"><p><i class="fas fa-map-marker-alt fa-2x"></i>92 Rue St Dizier Nancy, France</p></a>
-              <p><i class="fa fa-phone fa-2x"></i>+33 3 54 16 24 51</p></a>
-              <a href="https://www.instagram.com/musickontrol"><p><i class="fab fa-instagram fa-2x"></i>instagram</p></a>
-              <a href="https://fr-fr.facebook.com/pages/category/Electronics-Store/Music-Kontrol-170296356950248/"><p><i class="fab fa-facebook fa-2x"></i>facebook</p></a>
-              <a href="musickontrol@sfr.fr"></p><i class="fas fa-envelope fa-2x"></i>musickontrol@sfr.fr</p></a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
-
-  <footer class="py-5 bg-dark">
-    <div class="container">
-          <div class="">
-            <h4 class="text-white">Partenaires</h4>
-              <div class="slide"><img src="img/akai.png" width="100" ></div>
-              <div class="slide"><img src="img/Cubase_logo.svg.png" width="100" ></div>
-              <div class="slide"><img src="img/marshall.png" width="100" height="100"></div>
-              <div class="slide"><img src="img/vox.png" width="100" height="100"></div>
-              <div class="slide"><img src="img/yamaha.jpg" width="100" height="100"></div>
-          </div>
-            <div class="col-lg-8 mx-auto text text-right text-white ">
-              <h2>A propos de  nous </h2>
-              <p class="lead">Magasin de musique électronique
-              </p>
-            </div>
-          </div>
-    </div>
-  </footer>
-
   <script src="libraries/jquery/jquery.min.js"></script>
   <script src="libraries/bootstrap/js/bootstrap.bundle.min.js"></script>
 
@@ -152,8 +13,140 @@
   <script src="js/script.js"></script>
   <script src="js/carousel.js"></script>
   <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
+  <link href="libraries/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="libraries/fontawesome/css/all.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
+  <link href="css/infinite-slider.css" rel="stylesheet">
+</head>
+
+<body>
+  <!-- navigation-->
+  <nav class="navbar navbar-expand-lg navbar-white bg-dark fixed-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img class="logo" src="img/logo.jpg" alt="logo"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#evenements">Evenement</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#decouverte">Découverte</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#partenaires">Partenaires</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container">
+    <section id="services" class="bg-light text-center">
+      <div class="col-lg-12 mx-auto text-center pb-5">
+        <h2>Services</h2>
+      </div>
+      <div class="row">
+        <div class="col-sm">
+          <div class="card border-0 shadow">
+            <img src="img/mk1.jpg" class="card-img-top pricing " alt="pricing">
+            <h5 class="card-title mb-0">Paiement 3X sans frais</h5>
+            <div class="card-body text-center">
+              <h5 class="card-title mb-0">Paiement 3X sans frais</h5>
+              <div class="card-text text-black-50">Votre magasin vous offre la possibilité de régler vos achats en 3X
+                sans frais a partir de 150€ à l'aide d'un RIB et d'une piece d'identité. </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card border-0 shadow">
+            <img src="img/mk.jpg" class="card-img-top sono" alt="ampli">
+            <div class="card-body text-center">
+              <h5 class="card-title mb-0">installation de systèmes de sonorisation</h5>
+              <div class="card-text text-black-50">installation de systèmes pour magasin ,restaurant ,Bar.
+                La sonorisation de restaurant ou de bar répond à des besoins bien spécifiques. L'enjeu est d'obtenir une
+                sono capable de diffuser de la musique d'ambiance de façon agréable, avec un son parfait et un volume
+                égal,homogène dans tout le restaurant, après étude et devis a la clés ,Music kontrol propose des
+                solutions simple et bon marché.</div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card border-0 shadow">
+            <img src="img/mk1.jpg" class="card-img-top livraison" alt="livraison">
+            <div class="card-body text-center">
+              <h5 class="card-title mb-0">livraison</h5>
+              <div class="card-text text-black-50">A partir de 2OO€ ,après conseil en magasin les produits choisi ou
+                sélectionné par vos soins sur catalogue peuvent être livré a votre domicile gratuitement</div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card border-0 shadow">
+            <img src="img/carrteson.png" class="card-img-top location" alt="louer">
+            <div class="card-body text-center">
+              <h5 class="card-title mb-0">location son et lumière</h5>
+              <div class="card-text text-black-50">Un anniversaire ,un mariage,un événement ou le son et la lumière est
+                essentiel.
+                Music kontrol est present pour vos événements avec des systèmes professionnel et simple d'utilisation a
+                des prix attractif.</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card border-0 shadow">
+          <img src="img/mk1.jpg" class="card-img-top platine" alt="platine">
+          <div class="card-body text-center">
+            <h5 class="card-title mb-0">Reparations et nettoyage platine mk2</h5>
+            <div class="card-text text-black-50">Problème avec une vieille platine Technics mk2,changement de la masse,
+              de cable RCA ,nettoyage complet de votre platine .</div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+
+  <footer class="py-5 bg-dark">
+    <h4 class="text-white">Partenaires</h4>
+    <div class="partenaires">
+      <div class="slide "><img src="img/akai.png" class="mr-4" width="100"></div>
+      <div class="slide"><img src="img/Cubase_logo.svg.png" class="mr-4" width="100"></div>
+      <div class="slide"><img src="img/marshall.png" class="mr-4" width="100" height="100"></div>
+      <div class="slide"><img src="img/vox.png" class="mr-4" width="100" height="100"></div>
+      <div class="slide"><img src="img/yamaha.jpg" class="mr-4"  width="100" height="100"></div>
+    </div>
+    <div class="target text-white text-center mt-4">
+      <h2>A propos de nous </h2>
+      <p class="lead">Magasin de musique électronique</p>
+    </div>
+        <div class="Contact text-right ">
+          <h2 class="text-center text-white">Contact</h2>
+          <a href="https://goo.gl/maps/qUKwzLYqT5oHEsaL7">
+            <p><i class="fas fa-map-marker-alt fa-2x"></i>92 Rue St Dizier Nancy, France</p>
+          </a>
+          <p><i class="fa fa-phone fa-2x"></i>+33 3 54 16 24 51</p></a>
+          <a href="https://www.instagram.com/musickontrol">
+            <p><i class="fab fa-instagram fa-2x"></i>instagram</p>
+          </a>
+          <a href="https://fr-fr.facebook.com/pages/category/Electronics-Store/Music-Kontrol-170296356950248/">
+            <p><i class="fab fa-facebook fa-2x"></i>facebook</p>
+          </a>
+          <a href="musickontrol@sfr.fr"></p><i class="fas fa-envelope fa-2x"></i>musickontrol@sfr.fr</p></a>
+        </div>
+      </div>
+      </div>
+  </footer>
 </body>
+
 </html>
