--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
         <div class="col-sm">
           <div class="card border-0 shadow">
             <img src="img/mk1.jpg" class="card-img-top pricing " alt="pricing">
-            <h5 class="card-title mb-0">Paiement 3X sans frais</h5>
             <div class="card-body text-center">
               <h5 class="card-title mb-0">Paiement 3X sans frais</h5>
               <div class="card-text text-black-50">Votre magasin vous offre la possibilité de régler vos achats en 3X
@@ -72,8 +71,8 @@
           <div class="card border-0 shadow">
             <img src="img/mk.jpg" class="card-img-top sono" alt="ampli">
             <div class="card-body text-center">
-              <h5 class="card-title mb-0">installation de systèmes de sonorisation</h5>
-              <div class="card-text text-black-50">installation de systèmes pour magasin ,restaurant ,Bar.
+              <h5 class="card-title mb-0">Installation de systèmes de sonorisation</h5>
+              <div class="card-text text-black-50">Installation de systèmes pour magasin ,restaurant ,Bar.
                 La sonorisation de restaurant ou de bar répond à des besoins bien spécifiques. L'enjeu est d'obtenir une
                 sono capable de diffuser de la musique d'ambiance de façon agréable, avec un son parfait et un volume
                 égal,homogène dans tout le restaurant, après étude et devis a la clés ,Music kontrol propose des
@@ -85,7 +84,7 @@
           <div class="card border-0 shadow">
             <img src="img/mk1.jpg" class="card-img-top livraison" alt="livraison">
             <div class="card-body text-center">
-              <h5 class="card-title mb-0">livraison</h5>
+              <h5 class="card-title mb-0">Livraison</h5>
               <div class="card-text text-black-50">A partir de 2OO€ ,après conseil en magasin les produits choisi ou
                 sélectionné par vos soins sur catalogue peuvent être livré a votre domicile gratuitement</div>
             </div>
@@ -95,7 +94,7 @@
           <div class="card border-0 shadow">
             <img src="img/carrteson.png" class="card-img-top location" alt="louer">
             <div class="card-body text-center">
-              <h5 class="card-title mb-0">location son et lumière</h5>
+              <h5 class="card-title mb-0">Location son et lumière</h5>
               <div class="card-text text-black-50">Un anniversaire ,un mariage,un événement ou le son et la lumière est
                 essentiel.
                 Music kontrol est present pour vos événements avec des systèmes professionnel et simple d'utilisation a
@@ -103,14 +102,14 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="col">
-        <div class="card border-0 shadow">
-          <img src="img/mk1.jpg" class="card-img-top platine" alt="platine">
-          <div class="card-body text-center">
-            <h5 class="card-title mb-0">Reparations et nettoyage platine mk2</h5>
-            <div class="card-text text-black-50">Problème avec une vieille platine Technics mk2,changement de la masse,
-              de cable RCA ,nettoyage complet de votre platine .</div>
+        <div class="col-sm">
+          <div class="card border-0 shadow">
+            <img src="img/mk1.jpg" class="card-img-top platine" alt="platine">
+            <div class="card-body text-center">
+              <h5 class="card-title mb-0">Reparations et nettoyage platine mk2</h5>
+              <div class="card-text text-black-50">Problème avec une vieille platine Technics mk2,changement de la masse,
+                de cable RCA ,nettoyage complet de votre platine .</div>
+            </div>
           </div>
         </div>
       </div>
@@ -118,7 +117,7 @@
   </div>
 
   <footer class="py-5 bg-dark">
-    <h4 class="text-white">Partenaires</h4>
+    <h4 class="text-white text-center">Partenaires</h4>
     <div class="partenaires">
       <div class="slide "><img src="img/akai.png" class="mr-4" width="100"></div>
       <div class="slide"><img src="img/Cubase_logo.svg.png" class="mr-4" width="100"></div>
@@ -130,7 +129,7 @@
       <h2>A propos de nous </h2>
       <p class="lead">Magasin de musique électronique</p>
     </div>
-        <div class="Contact text-right ">
+        <div class="contact">
           <h2 class="text-center text-white">Contact</h2>
           <a href="https://goo.gl/maps/qUKwzLYqT5oHEsaL7">
             <p><i class="fas fa-map-marker-alt fa-2x"></i>92 Rue St Dizier Nancy, France</p>
