--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
     </section>
 
     <div class="container">
-        <div class="row justify-content-center">
-          <div class="services">
+        <div class="row justify-content-center ">
+          <div class="services" style="background: url(img/price.jpg); background-size: cover; background-position: center center">
             <div class="card">
-              <div class="card-body">
+              <div class="card-body ">
                 <h5 class="card-title">Paiement 3X sans frais</h5>
                 <div class="card-text">Votre magasin vous offre la possibilité de régler vos achats en 3X
                   sans frais a partir de 150€ à l'aide d'un RIB et d'une piece d'identité. 
@@ -70,6 +70,56 @@
               </div>
             </div>
           </div>
+
+          <div class="services" style="background: url(img/mk.jpg); background-size: cover; background-position: center center">
+            <div class="card">
+              <div class="card-body ">
+                <h5 class="card-title">Installation de systèmes de sonorisation</h5>
+                <div class="card-text">Installation de systèmes pour magasin ,restaurant ,Bar.
+                  La sonorisation de restaurant ou de bar répond à des besoins bien spécifiques. L'enjeu est d'obtenir une
+                  sono capable de diffuser de la musique d'ambiance de façon agréable, avec un son parfait et un volume
+                  égal,homogène dans tout le restaurant, après étude et devis a la clés ,Music kontrol propose des
+                  solutions simple et bon marché.
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="services"style="background: url(img/livraison.jpg); background-size: cover; background-position: center center">
+            <div class="card">
+              <div class="card-body ">
+                <h5 class="card-title">Livraison</h5>
+                <div class="card-text">A partir de 2OO€ ,après conseil en magasin les produits choisi ou
+                  sélectionné par vos soins sur catalogue peuvent être livré a votre domicile gratuitement.
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="services"style="background: url(img/.jpg); background-size: cover; background-position: center center">
+            <div class="card">
+              <div class="card-body ">
+                <h5 class="card-title">Location son et lumière</h5>
+                <div class="card-text">Un anniversaire ,un mariage,un événement ou le son et la lumière est
+                  essentiel.
+                  Music kontrol est present pour vos événements avec des systèmes professionnel et simple d'utilisation a
+                  des prix attractif.
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="services">
+            <div class="card">
+              <div class="card-body ">
+                <h5 class="card-title">Reparations et nettoyage platine mk2</h5>
+                <div class="card-text">Problème avec une vieille platine Technics mk2,changement de la masse,
+                  de cable RCA ,nettoyage complet de votre platine.
+                </div>
+              </div>
+            </div>
+          </div> 
+
         </div>
     </div>
 
