--- a/index.html
+++ b/index.html
@@ -64,96 +64,9 @@
       <span class="tooltip"></span>
       <div class="services row justify-content-center"></div>
     </div>
-    <div class="row justify-content-center">
-      <div class="col xl-12">
-        <h1 id="partenaires" class="text-center m-5">Partenaires</h1>
+    <h1 id="partenaires" class="text-center m-5">Partenaires</h1>
+    <div class=" partenaire row justify-content-center">
       </div>
-      <div class="col xl-12">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img class="d-block w-50" src="img/partenaires/akai.jpg" alt="First slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-75" src="img/partenaires/Allen&Heath.jpg" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-75" src="img/partenaires/Arturia.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-75" src="img/partenaires/beyerdynamic.jpg" alt="beyerdynamic">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-75" src="img/partenaires/DenonDj.jpg" alt="DenonDj">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-75" src="img/partenaires/Electro-Voice.jpg" alt="Electro-Voice">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-50" src="img/partenaires/korg.jpg" alt="korg">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-50" src="img/partenaires/M-Audio.jpg" alt="M-Audio">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-50" src="img/partenaires/Mackie.png" alt="Mackie">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-50" src="img/partenaires/ModalElectronic.jpg" alt="ModalElectronic">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-50" src="img/partenaires/Moog.jpg" alt="Moog">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-50" src="img/partenaires/novation.jpg" alt="novation">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-50" src="img/partenaires/Numark.jpg" alt="Numark">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-50" src="img/partenaires/ortofon.jpg" alt="ortofon">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-50" src="img/partenaires/Presonus.jpg" alt="Presonus">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-50" src="img/partenaires/Prodige.jpg" alt="Prodige">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-50" src="img/partenaires/Rane.jpg" alt="Rane">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-50" src="img/partenaires/reloop.jpg" alt="reloop">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-50" src="img/partenaires/roland.jpg" alt="roland">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-50" src="img/partenaires/Shure.jpg" alt="Shure">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-50" src="img/partenaires/Udg.jpg" alt="udg">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-50" src="img/partenaires/reloop.jpg" alt="reloop">
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-        </div>
-      </div>
-
     </div>  
   </div>
   <footer class="py-5 bg-dark">
