--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="services row justify-content-center"></div>
     </div>
     <h1 id="partenaires" class="text-center m-5">Partenaires</h1>
-    <div class=" partenaire row justify-content-center">
+    <div class=" partenaire row">
       </div>
     </div>  
   </div>
