--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </nav>
   <!--jumbotron-->
   <section class="header">
-    <p class="text-center">Magasin de vente & location de matériel de sonorisation et insonorisation , lumières ,djing,
+    <p class="text-center intro">Magasin de vente & location de matériel de sonorisation et insonorisation , lumières ,djing,
       instruments et consommable (cables). </p>
   </section>
 
