--- a/index.html
+++ b/index.html
@@ -52,11 +52,45 @@
       </div>
     </div>
   </nav>
-  <!--jumbotron-->
-  <section class="header">
-    <p class="text-center intro">Magasin de vente & location de matériel de sonorisation et insonorisation , lumières ,djing,
-      instruments et consommable (cables). </p>
-  </section>
+  <!--slider-->
+  <div class="container-fluid">
+  <div class="col-sm-12">
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="h-50 d-block w-50" src="img/808.jpg" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="img/beatbox.jpg" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="img/korgmidi.jpg" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="h-50 d-block w-100" src="img/MK3.jpg" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class=" d-block w-100" src="img/carrteson.png" alt="Third slide">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+</div>
 
   <div class="container">
     <div class="row justify-content-center">
