--- a/index.html
+++ b/index.html
@@ -65,16 +65,13 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="h-50 d-block w-50" src="img/808.jpg" alt="First slide">
+        <img class=" d-block w-100" src="img/pad.jpg" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="img/beatbox.jpg" alt="Second slide">
+        <img class="d-block w-100" src="img/beatbox2.jpg" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="img/korgmidi.jpg" alt="Third slide">
-      </div>
-      <div class="carousel-item">
-        <img class="h-50 d-block w-100" src="img/MK3.jpg" alt="Third slide">
+        <img class="d-block w-100" src="img/mk1.jpg" alt="Third slide">
       </div>
       <div class="carousel-item">
         <img class=" d-block w-100" src="img/carrteson.png" alt="Third slide">
