--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
         <img class="d-block w-100" src="img/beatbox.jpg" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="img/MK2.jpg" alt="Third slide">
+        <img class="d-block w-100" src="img/korgVolca.jpg" alt="Third slide">
       </div>
       <div class="carousel-item">
-        <img class=" d-block w-100" src="img/carrteson.png" alt="Third slide">
+        <img class=" d-block w-100" src="img/Focuswrite.png" alt="Third slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
