--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class=" d-block w-100" src="img/pad.jpg" alt="First slide">
+        <img  src="img/MK2cropped.jpg" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="img/pad.jpg" alt="Second slide">
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="img/beatbox.jpg" alt="Second slide">
