--- a/index.html
+++ b/index.html
@@ -92,11 +92,13 @@
 
   <div class="container">
     <div class="row justify-content-center">
-      <h1 id="services" class="m-5">Services</h1>
+      <h1 id="services" class="m-3">Services</h1>
+      <hr class="w-100" />
       <span class="tooltip"></span>
       <div class="services row justify-content-center"></div>
     </div>
-    <h1 id="partenaires" class="text-center m-5">Partenaires</h1>
+    <h1 id="partenaires" class="text-center m-3">Partenaires</h1>
+    <hr class="w-100" />
     <div class=" partenaire row">
       </div>
     </div>  
@@ -106,7 +108,8 @@
       <div class="row>">
         <div class="col-md-4">
           <div id="contact" class="contact">
-            <h1 class="text-white">Contact</h1>
+            <h1 class="text-white m-3">Contact</h1>
+            <hr class="w-100" />
             <div class="d-flex flex-row">
               <div class="p-1">
                 <p><i class="fas fa-map-marker-alt fa-2x"></i></p>
