--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#partenaires">Partenaires</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="articles.php">Articles</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -64,7 +67,7 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img  src="img/MK2cropped.jpg" alt="First slide">
+        <img  src="img/MK2cropped.jpg" class="d-block w-100" alt="First slide">
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="img/pad.jpg" alt="Second slide">
