--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a class="nav-link js-scroll-trigger" href="#partenaires">Partenaires</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="articles.php">Articles</a>
+            <a class="nav-link js-scroll-trigger" href="articleView.php">Articles</a>
           </li>
         </ul>
       </div>
