--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
   <title>Muzikcontrol</title>
   <script src="libraries/jquery/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
+
   <script src="libraries/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <script src="libraries/jquery-easing/jquery.easing.min.js"></script>
 
   <script src="js/script.js"></script>
-  <script src="js/carousel.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
   <link href="libraries/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -40,16 +39,16 @@
         <img  src="img/MK2cropped.jpg" class="d-block w-100" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="img/pad.jpg" alt="Second slide">
+        <img class="d-block w-100" src="img/slider/pad.jpg" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="img/beatbox.jpg" alt="Second slide">
+        <img class="d-block w-100" src="img/slider/beatbox.jpg" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="img/korgVolca.jpg" alt="Third slide">
+        <img class="d-block w-100" src="img/slider/korgVolca.jpg" alt="Third slide">
       </div>
       <div class="carousel-item">
-        <img class=" d-block w-100" src="img/Focuswrite.png" alt="Third slide">
+        <img class=" d-block w-100" src="img/slider/Focuswrite.png" alt="Third slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
